assets/stylesheets/common/chat-composer.scss
.chat-composer-container {
  display: flex;
  flex-direction: column;

  #chat-full-page-uploader,
  #chat-widget-uploader {
    display: none;
  }

  .drop-a-file {
    display: none;
  }
}

.chat-composer {
  display: flex;
  align-items: center;
  background-color: var(--secondary);
  border: 1px solid var(--primary-low-mid);
  border-radius: 6px;
  padding: 0.25rem;

  &.is-disabled {
    background-color: var(--primary-low);
    border: 1px solid var(--primary-low-mid);
  }

  .send-btn {
    padding: 0.4rem 0.5rem;
    border: 1px solid transparent;
    border-radius: 6px;

    .d-icon {
      color: var(--tertiary);
    }

    &:disabled {
      cursor: not-allowed;

      .d-icon {
        color: var(--primary-low);
      }
    }

    &:not(:disabled) {
      &:hover,
      &:focus {
        background: var(--tertiary);
        .d-icon {
          color: var(--secondary);
        }
      }
    }
  }

  .chat-composer-input {
    margin: 0;
    width: 100%;
    appearance: none;
    outline: none;
    border: 0;
    resize: none;
    max-height: 125px;
    scrollbar-color: var(--primary-low-mid) transparent;
    transition: scrollbar-color 0.2s ease-in-out;
    background: none;
    margin: 0;
    padding: 0.25rem 0.5rem;
    text-overflow: ellipsis;

    &:placeholder-shown,
    &::placeholder {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      padding-right: 1.25em;
    }

    &::-webkit-scrollbar-thumb {
      background-color: var(--primary-low-mid);
      border-radius: 6px;
      border: 3px solid var(--secondary);
    }
    &:hover {
      scrollbar-color: var(--primary-low-mid) transparent;
      &::-webkit-scrollbar-thumb {
        background-color: var(--primary-low-mid);
      }
    }
    &::-webkit-scrollbar {
      width: 12px;
    }
  }
}

.chat-composer-message-details {
  padding: 0.5rem 0.75rem;
  border-top: 1px solid var(--primary-low);
  display: flex;
  align-items: center;
  @include ellipsis;
  position: relative;
  height: 100%;
  max-height: calc(2em - 5px);

  .cancel-message-action {
    margin-left: auto;
  }
}

